--- a/index.html
+++ b/index.html
@@ -10,5 +10,41 @@
   <p>用途：Keepa CSVを入力として、楽天・Yahoo!ショッピングの検索APIで新品候補を抽出し、概算利益の候補一覧を作成します。</p>
   <p>ログイン連携：なし</p>
   <p>収集する個人情報：なし</p>
+
+  <hr />
+
+  <h2>SP-API（Selling Partner API）利用予定</h2>
+
+  <p>
+    本ツールは、私自身のセラー業務（個人利用）のための内部ツールです。第三者への提供・販売・共有は行いません。
+  </p>
+
+  <h3>利用目的</h3>
+  <ul>
+    <li>出品商品一覧レポートからASIN等の商品IDを抽出</li>
+    <li>Selling Partner API（主にカタログ系）を用いてブランド情報を取得</li>
+    <li>ブランド別の出品数を集計し、規制対象ブランドの把握や運用改善に利用</li>
+  </ul>
+
+  <h3>取得・保管するデータ</h3>
+  <ul>
+    <li>入力：ASIN（または商品ID）、商品名（出品一覧レポート由来）</li>
+    <li>取得：ブランド（brand/brandName 等のカタログ属性）、必要に応じて関連する最小限の属性</li>
+    <li>出力：ブランド別の件数（集計結果）</li>
+    <li>ログ/保存：必要最小限（ASIN・ブランド・件数）。注文者情報など個人情報は扱いません。</li>
+  </ul>
+
+  <h3>セキュリティ</h3>
+  <ul>
+    <li>認証情報（LWA/AWSキー等）はソースコードに埋め込まず、環境変数またはローカル設定ファイルで管理します。</li>
+    <li>アクセスは本人（単一運用者）のみを想定し、端末のパスコード・MFA等で保護します。</li>
+  </ul>
+
+  <h3>お問い合わせ</h3>
+  <p>
+    連絡先：<a href="mailto:YOUR_EMAIL_HERE">YOUR_EMAIL_HERE</a>
+  </p>
+
+
 </body>
 </html>
